# aion

./: .gitignore  CONTRIBUTING.MD  Cargo.toml  LICENSE.md  README.md  benchmark.py  build.rs  calendar.ics  main.aion  main.c  main.js  main.py  package-lock.json  package.json  server.aion  test_gc.aion  utils.aion
.cargo/: config.toml
docs/: LOCAL-BUILDING.MD  README.md  architecture.md  design.md  ide-stubs.md
docs/examples/: calendar.ics  exam.aion  meetings_only.ics  orar.ics  personal_only.ics  simplest.aion  tasks.aion  test.aion
lib/: greeter.aion
runtime/: aion_chkstk.c  aion_file.c  aion_math.c  aion_runtime.c  aion_shadowstack.c  aion_sockets.c  aion_time.c
src/: errors.rs  main.rs  resolver.rs  stdlib.rs
src/ast/: ast.rs  mod.rs
src/compiler/: codegen.rs  compiler.rs  linker.rs  mod.rs  runtime.rs  stdlib_registry.rs
src/compiler/codegen/: expr.rs  func.rs  mod.rs  runtime.rs  stdlib.rs  types.rs
src/core/: AionLanguageExecutor.ts
src/core/intepreter/: Interpreter.ts
src/core/intepreter/helpers/io_system/: ioDictionarySystem.ts  ioFileSystem.ts
src/lexer/: lexer.rs  mod.rs
src/parser/: mod.rs  parser.rs
stdlib/: builtins.aion  io.aion  math.aion  name.aion  prelude.aion  requests.aion  sockets.aion  string.aion  time.aion
stubs/: llvm_target_stubs.c
test/core/: README.,md  simple.aion
